# aurora-workspace-demo

./: Cargo.toml
res/: Random.abi  Random.hex  aurora-testnet.wasm
src/: common.rs  main.rs
